--- a/assets/css/survey.scss
+++ b/assets/css/survey.scss
@@ -10,4 +10,5 @@ h1 {
     font-family: "adelle-condensed", sans-serif;
     font-weight: 200;
     font-size: 2rem;
+    text-transform: uppercase;
 }
