--- a/assets/css/survey.scss
+++ b/assets/css/survey.scss
@@ -5,20 +5,31 @@ $dark-green: #8f8938;
 $adelle: "adelle-condensed", "Adelle Condensed", sans-serif;
 $proxima: "proxima-nova-alt-condensed", "Proxima Nova Condensed", sans-serif;
 
-html, body {
+html {
+    font-size: 16px;
+    @media (max-width: 500px) {
+        font-size: 12px;
+    }
+    @media (min-width: 1100px) {
+        font-size: 20px;
+    }
+}
+
+body {
+    position: relative;
     background: $background;
     color: white;
     font-family: $proxima;
     font-weight: 300;
-    font-size: 16pt;
+    font-size: 1.2rem;
     margin: 0;
     width: 100%;
     overflow-x: hidden;
 }
 
-main {
+main, footer {
     position: relative;
-    margin: 10rem auto;
+    margin: 7rem auto 2rem auto;
     max-width: 40rem;
     width: 100%;
 }
@@ -44,8 +55,13 @@ main {
     position: relative;
     border: .4rem solid white;
     padding: .4rem;
+}
 
-    @media (max-width: 40rem) {
+@media (max-width: 48rem) {
+    main, footer {
+        max-width: 100%;
+    }
+    .frame {
         border: none;
         border-top: .4rem solid white;
         border-bottom: .4rem solid white;
@@ -56,8 +72,7 @@ main {
 form {
     margin: 0;
     background: white;
-    padding: 3rem;
-    padding-top: 5rem;
+    padding: 6rem 3rem 1rem 3rem;
     color: $background;
 
     h1 {
@@ -76,33 +91,44 @@ form {
 
         .bottom {
             margin: 1rem 3rem;
-            color: $light-green;
             font-family: $proxima;
             font-size: 3rem;
-            font-weight: 300;
+            font-weight: 100;
             text-align: right;
         }
+    }
+
+    hr {
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid $background;
+        margin: 2rem 0;
     }
 
     p {
         margin: 0 0 1rem 0;
     }
 
+    .instructions {
+        font-size: 1rem;
+    }
+
     a {
         position: relative;
         text-decoration: none;
         color: inherit;
-        transition: color 0.1s;
+        transition: color .1s;
+
         &::before {
             content: '';
             position: absolute;
             z-index: 0;
-            bottom: .1em;
+            bottom: 1px;
             left: 0;
             width: 100%;
-            height: .1em;
+            height: 2px;
             background: $light-green;
-            transition: color 0.1s;
+            transition: color .1s;
         }
 
         &:hover, &:focus, &:active {
@@ -110,19 +136,167 @@ form {
             color: $light-green;
             &::before {
                 background: $background;
-                height: .05em;
+                bottom: 2px;
+                height: 1px;
             }
         }
+    }
+
+    .formfield {
+        margin: 0 0 2rem 0;
     }
 
     input[type="text"], input[type="email"] {
         background: none;
         border: none;
         font: inherit;
-        border-bottom: .05rem solid $background;
+        border-bottom: 2px solid $light-green;
+        width: 15rem;
+
+        &:focus {
+            outline: none;
+        }
+    }
+
+    .textfield {
+        position: relative;
+
+        input {
+            display: block;
+            padding-top: 1rem;
+
+            & + label {
+                display: block;
+                position: absolute;
+                bottom: 2px;
+                left: 0;
+                width: 100%;
+                height: 1.5rem;
+                font-family: $adelle;
+                font-size: 1rem;
+                font-weight: 300;
+                text-transform: uppercase;
+                color: $light-green;
+                background: white;
+                transition: all .2s;
+            }
+
+            &.filled, &:focus {
+
+                & + label {
+                    font-size: 0.8rem;
+                    bottom: 1.5rem;
+                }
+            }
+        }
+    }
+
+    input[type="radio"] {
+        display: none;
+
+        & + label {
+            display: inline-block;
+            position: relative;
+            padding-left: 1.3rem;
+            color: $light-green;
+            cursor: pointer;
+            transition: all .1s;
+
+            &::before, &::after {
+                content: "";
+                position: absolute;
+                top: .25rem;
+                left: 0;
+                width: .75rem;
+                height: .75rem;
+                background: none;
+                border: 2px solid $light-green;
+                border-radius: 50%;
+                transition: all .1s;
+            }
+            &::after {
+                width: .25rem;
+                height: .25rem;
+                top: .625rem;
+                left: .375rem;
+                background: white;
+                border: none;
+            }
+        }
+        &:checked + label {
+            color: $background;
+
+            &::before {
+                background: $background;
+                border-color: $background;
+            }
+        }
+    }
+
+    .submit {
+        text-align: right;
+    }
+
+    input[type="submit"] {
+        font-family: $adelle;
+        font-size: 1rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        color: $light-green;
+        border: 2px solid $light-green;
+        border-radius: .5rem;
+        background: none;
+        outline: none;
+        cursor: pointer;
+
+        &:hover, &:focus, &:active {
+            background: $light-green;
+            color: white;
+        }
     }
 
     label {
         cursor: pointer;
     }
+}
+
+footer {
+    margin: 0 auto;
+    padding-left: 2rem;
+    font-family: $adelle;
+    font-weight: 300;
+    font-size: .8rem;
+    color: $light-green;
+
+    a {
+        color: inherit;
+        text-decoration: none;
+        &:hover, &:focus, &:active {
+            text-decoration: underline;
+        }
+    }
+}
+
+:placeholder {
+    font: inherit;
+    color: inherit;
+    opacity: 0.25;
+}
+
+::-webkit-input-placeholder {
+    font: inherit;
+    color: inherit;
+    opacity: 0.25;
+}
+
+::-moz-placeholder {
+    font: inherit;
+    color: inherit;
+    opacity: 0.25;
+}
+
+:-ms-input-placeholder {
+    font: inherit;
+    color: inherit;
+    opacity: 0.25;
 }
