--- a/assets/css/survey.scss
+++ b/assets/css/survey.scss
@@ -1,4 +1,5 @@
-$background: #0E2132;
+// $background: #0E2132;
+$background: brown;
 $light-green: #bcb868;
 $dark-green: #8f8938;
 $pink: #E87B7E;
