--- a/assets/css/holiday.scss
+++ b/assets/css/holiday.scss
@@ -7,20 +7,36 @@ $adelle: "adelle-condensed", "Adelle Condensed", sans-serif;
 $proxima: "proxima-nova-alt-condensed", "Proxima Nova Condensed", sans-serif;
 
 html {
-    font-size: 16px;
-    @media (max-width: 500px) {
-        font-size: 12px;
+    font-size: 20px;
+    @media (max-width: 1200px) {
+        font-size: 18px;
     }
-    @media (min-width: 1100px) {
+    @media (max-width: 1080px) {
+        font-size: 16px;
+    }
+    @media (max-width: 960px) {
         font-size: 20px;
+    }
+    @media (max-width: 800px) {
+        font-size: 18px;
+    }
+    @media (max-width: 740px) {
+        font-size: 16px;
+    }
+    @media (max-width: 640px) {
+        font-size: 20px;
+    }
+    @media (max-width: 400px) {
+        font-size: 18px;
+    }
+    @media (max-width: 360px) {
+        font-size: 16px;
     }
     overflow-x: hidden;
 }
 
 body {
     position: relative;
-    // background: $background;
-    // color: white;
     font-family: $proxima;
     font-weight: 300;
     font-size: 1.2rem;
@@ -33,6 +49,9 @@ h1 {
     font-weight: 800;
     font-size: 3rem;
     padding: 0 2rem;
+    @media (max-width: 960px) {
+        font-size: 2rem;
+    }
 }
 
 .cards {
