--- a/assets/css/holiday.scss
+++ b/assets/css/holiday.scss
@@ -101,3 +101,18 @@ h1 {
         position: absolute;
     }
 }
+
+.map {
+    width: 100%;
+    height: 600px;
+
+    @media (max-height: 800px) {
+        height: 450px;
+    }
+    @media (max-height: 600px) {
+        height: 300px;
+    }
+    @media (max-height: 350px) {
+        width: 18rem;
+    }
+}
