fix placement issue

--- a/assets/css/holiday.scss
+++ b/assets/css/holiday.scss
@@ -76,6 +76,7 @@ h1 {
         overflow: hidden;
 
         img {
+            position: absolute;
             width: 100%;
             height: auto;
         }
