--- a/assets/css/holiday.scss
+++ b/assets/css/holiday.scss
@@ -38,7 +38,8 @@ html {
 body {
     position: relative;
     font-family: $proxima;
-    font-weight: 300;
+    color: $background;
+    font-weight: 400;
     font-size: 1.2rem;
     margin: 0;
     width: 100%;
@@ -97,7 +98,7 @@ h1 {
     }
 
     p {
-        padding: 0 0.5rem;
+        padding: 0 0.2rem;
         font-size: 1rem;
         position: absolute;
     }
