--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,10 +18,13 @@ body {
 nav {
 	margin: 2rem 0;
 	.lang-link a {
+		display: block;
+		position: absolute;
+		top: 10.5rem;
+		right: 1rem;
+		z-index: 10;
 		color: inherit;
 		text-decoration: none;
-		float: right;
-		margin-right: 1rem;
 		&:active, &:hover, &:focus {
 			color: $green;
 		}
