--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,8 +1,3 @@
-@font-face {
-	font-family: 'Hswsc';
-	src: url('../svg/hswsc.woff') format('woff');
-}
-
 $brown: #c9c399;
 $green: #d0d97a;
 $mint: #badfbe;
@@ -10,7 +5,7 @@ $mint: #badfbe;
 body {
     font-family: "proxima-nova", "Proxima Nova", sans-serif;
     @media (max-width: 600px) {
-    	font-size: 15px;
+    	font-size: 14px;
     }
     @media (max-width: 400px) {
     	font-size: 12px;
@@ -83,7 +78,7 @@ nav {
         text-transform: uppercase;
         &.active {
         	color: $green;
-        	font-weight: 900;
+        	font-weight: 800;
         }
         a {
         	color: inherit;
@@ -116,6 +111,11 @@ nav {
     		&.active {
     			color: white;
     			font-weight: 400;
+    		}
+    		a {
+    			&:active, &:hover, &:focus {
+					color: white;
+				}
     		}
     	}
     	&.active {
@@ -171,16 +171,20 @@ main {
 		}
 		@media (max-width: 600px) {
 			height: 2rem;
-			border-top-width: 1.5px;
-			border-bottom-width: 1.5px;
+			border-top-width: 1px;
+			border-bottom-width: 1px;
 		}
 	}
 	h2 {
-		font-family: 'Hswsc';
-		font-size: 2em;
+		font-size: 1.2em;
+		font-weight: 900;
+		text-transform: uppercase;
 		color: $green;
 		&:nth-of-type(2n+1){
 			color: $mint;
+		}
+		@media (max-width: 400px) {
+			font-size: 1em;
 		}
 	}
 	a {
@@ -190,5 +194,8 @@ main {
 		&:hover, &:focus, &:active {
 			color: $green;
 		}
+	}
+	img {
+		width: 100%;
 	}
 }
