--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,43 +16,51 @@ body {
     overflow-x: hidden;
 }
 
-nav {
-	margin: 2rem 0;
-	.lang-link a {
-		display: block;
-		position: absolute;
-		top: 6.6rem;
-		right: 1rem;
-		z-index: 10;
-		color: inherit;
-		text-decoration: none;
-		border: 2px solid black;
-		border-radius: 50%;
-		font-size: 12px;
-		font-weight: 700;
-		padding: 6px 6px 5px 5px;
-		background: $green;
-		transition: right 0.5s;
-		&:active, &:hover, &:focus {
-			background: black;
-			color: $mint;
-		}
-		@media (max-width: 600px) {
-			border-width: 1.5px;
-			top: 5.65rem;
-			font-size: 8px;
-			font-weight: 600;
-			padding: 4px 4px 3.5px 3.5px;
-		}
-		@media (max-width: 400px) {
-			top: 1rem;
-			padding: 0;
-			font-size: 12px;
-			font-weight: 400;
-			background: none;
-			border: none;
+.lang-link a {
+	display: block;
+	position: absolute;
+	top: 6.6rem;
+	right: 1rem;
+	z-index: 10;
+	color: inherit;
+	text-decoration: none;
+	border: 2px solid black;
+	border-radius: 50%;
+	font-size: 12px;
+	font-weight: 700;
+	padding: 6px 6px 5px 5px;
+	background: $green;
+	transition: right 0.5s;
+	&:active, &:hover, &:focus {
+		background: black;
+		color: $mint;
+	}
+	@media (max-width: 600px) {
+		border-width: 1.5px;
+		top: 5.65rem;
+		font-size: 8px;
+		font-weight: 600;
+		padding: 4px 4px 3.5px 3.5px;
+		&.home {
+			top: 4.1rem;
 		}
 	}
+	@media (max-width: 400px) {
+		top: 1rem;
+		padding: 0;
+		font-size: 12px;
+		font-weight: 400;
+		background: none;
+		border: none;
+		&.home {
+			top: 1rem;
+		}
+	}
+}
+
+nav {
+	margin: 2rem 0;
+	min-height: 1rem;
 	.mobile-menu {
 		display: none;
 		transition: left 0.5s;
@@ -89,6 +97,7 @@ nav {
         }
     }
     @media (max-width: 400px) {
+    	margin: 1rem 0;
     	ul {
     		transition: left 0.5s;
     		display: block;
@@ -137,7 +146,6 @@ main {
 	width: 100%;
 	overflow-x: hidden;
 	@media (max-width: 400px) {
-		margin-top: 3rem;
 		transition: left 0.5s;
 		left: 0;
 		&.active-menu {
@@ -161,7 +169,7 @@ main {
 		border-bottom: 2px solid black;
 		margin-bottom: 2rem;
 		box-sizing: content-box;
-		img {
+		img, a {
 			display: block;
 			margin: 0 auto;
 			height: inherit;
@@ -173,6 +181,63 @@ main {
 			height: 2rem;
 			border-top-width: 1px;
 			border-bottom-width: 1px;
+		}
+	}
+	.title {
+		max-width: 100%;
+		margin: 1.8rem 0;
+		padding: 0;
+		height: 9rem;
+		.container {
+			width: 1100%;
+			margin-left: -500%;
+			height: inherit;
+		}
+		img {
+			height: inherit;
+			margin: 0 auto;
+		}
+		@media (max-width: 600px) {
+			height: 4.5rem;
+		}
+	}
+	.wedding-date {
+		max-width: 100%;
+		margin: 0;
+		padding: 0;
+		padding-bottom: 1rem;
+		p {
+			margin: 0;
+			font-size: 4.5em;
+			font-weight: 100;
+			text-align: center;
+		}
+		@media (max-width: 600px) {
+			margin-top: -1rem;
+			margin-bottom: -2rem;
+			p {
+				font-size: 2.4em;
+			}
+		}
+		@media (max-width: 400px) {
+			p {
+				font-size: 2.8em;
+			}
+		}
+	}
+	.description {
+		font-size: 1.2em;
+		font-weight: 500;
+		text-align: center;
+		margin-top: 5rem;
+		padding: 0 3rem;
+		@media (max-width: 600px) {
+			font-weight: 300;
+		}
+		@media (max-width: 400px) {
+			margin-top: 3rem;
+			padding: 0 1.5rem;
+			font-weight: 400;
 		}
 	}
 	h2 {
@@ -187,7 +252,7 @@ main {
 			font-size: 1em;
 		}
 	}
-	a {
+	p a {
 		color: inherit;
 		text-decoration: none;
 		border-bottom: 2px solid $green;
