--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -173,8 +173,8 @@ main {
 		max-width: 40rem;
 		margin: 0 auto;
 		box-sizing: border-box;
-		padding: 0 1rem;
-		margin-bottom: 1rem;
+		padding: 0 1em;
+		margin-bottom: 1em;
 	}
 	h1 {
 		max-width: 100%;
@@ -263,6 +263,7 @@ main {
 			}
 		}
 	}
+
 	.description {
 		font-size: 1.2em;
 		font-weight: 500;
@@ -278,10 +279,12 @@ main {
 			font-weight: 400;
 		}
 	}
+
 	h2 {
-		font-size: 1.2em;
+		font-size: 1.4em;
 		font-weight: 900;
 		text-transform: uppercase;
+		text-align: center;
 		color: $green;
 		&:nth-of-type(2n+1){
 			color: $mint;
@@ -290,6 +293,7 @@ main {
 			font-size: 1em;
 		}
 	}
+
 	p a {
 		color: inherit;
 		text-decoration: none;
@@ -299,13 +303,57 @@ main {
 		}
 	}
 	p img {
-		width: 80%;
-		margin: 0 10%;
+		width: 100%;
+		display: block;
+		margin: 0 auto;
 	}
 
 	img {
 		width: 100%;
 	}
+
+	&.program {
+		text-align: center;
+		line-height: 1.3;
+
+		h2 {
+			font-size: 2em;
+			font-weight: 800;
+			text-transform: capitalize;
+			border-top: 2px solid black;
+			padding: 3rem 0;
+			max-width: 100%;
+			&:first-of-type {
+				border: none;
+			}
+			@media (max-width: 600px) {
+				border-width: 1px;
+			}
+		}
+
+		h3 {
+			margin-top: -1em;
+			margin-bottom: 0;
+			font-size: 1.3em;
+		}
+
+		p img {
+			width: 16rem;
+			border: 2px solid black;
+			margin-bottom: 0.5em;
+		}
+
+		hr {
+			border: none;
+			padding: 2rem 0;
+			margin: 0;
+		}
+	}
+}
+
+.center {
+	display: block;
+	text-align: center;
 }
 
 .home-frame {
