--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,6 +5,7 @@ $mint: #badfbe;
 html {
 	margin: 0;
 	padding: 0;
+	height: 100%;
 	overflow-x: hidden;
 }
 
@@ -18,7 +19,8 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    min-height: 100%;
+    height: 100%;
+    position: relative;
 }
 
 .lang-link a {
@@ -160,6 +162,7 @@ nav {
 main {
 	position: relative;
 	width: 100%;
+	min-height: 60%;
 	overflow-x: hidden;
 	@media (max-width: 400px) {
 		transition: left 0.5s;
@@ -281,10 +284,9 @@ main {
 	}
 
 	h2 {
-		font-size: 1.4em;
+		font-size: 1.2em;
 		font-weight: 900;
 		text-transform: uppercase;
-		text-align: center;
 		color: $green;
 		&:nth-of-type(2n+1){
 			color: $mint;
@@ -294,12 +296,25 @@ main {
 		}
 	}
 
-	p a {
+	p a, ul a, ol a {
 		color: inherit;
 		text-decoration: none;
-		border-bottom: 2px solid $green;
+		position: relative;
+		&::before {
+			content: "";
+			position: absolute;
+			top: 75%;
+			left: 0;
+			height: 3px;
+			width: 100%;
+			background: $green;
+			z-index: -1;
+		}
 		&:hover, &:focus, &:active {
-			color: $green;
+			&::before {
+				top: 0;
+				height: 100%;
+			}
 		}
 	}
 	p img {
@@ -312,9 +327,40 @@ main {
 		width: 100%;
 	}
 
+	&.hotel {
+		p img {
+			width: 70%;
+		}
+	}
+
 	&.program {
 		text-align: center;
 		line-height: 1.3;
+
+		strong {
+			display: block;
+			max-width: 18rem;
+			margin: 0 auto;
+			text-align: left;
+		}
+
+		ul {
+			margin-top: -1em;
+			text-align: left;
+			max-width: 20rem;
+			list-style-type: none;
+
+			a {
+				&::before {
+					height: 0;
+				}
+				&:hover, &:focus, &:active {
+					&::before {
+						height: 100%;
+					}
+				}
+			}
+		}
 
 		h2 {
 			font-size: 2em;
@@ -323,9 +369,7 @@ main {
 			border-top: 2px solid black;
 			padding: 3rem 0;
 			max-width: 100%;
-			&:first-of-type {
-				border: none;
-			}
+			color: $mint;
 			@media (max-width: 600px) {
 				border-width: 1px;
 			}
