--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,6 @@ $mint: #badfbe;
 html {
 	margin: 0;
 	padding: 0;
-	height: 100%;
 	overflow-x: hidden;
 }
 
@@ -19,7 +18,6 @@ body {
     padding: 0;
     margin: 0;
     overflow-x: hidden;
-    height: 100%;
     position: relative;
 }
 
@@ -165,7 +163,7 @@ nav {
 main {
 	position: relative;
 	width: 100%;
-	min-height: 60%;
+	min-height: 60vh;
 	overflow-x: hidden;
 	@media (max-width: 400px) {
 		transition: left 0.5s;
