--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -301,21 +301,9 @@ main {
 		color: inherit;
 		text-decoration: none;
 		position: relative;
-		&::before {
-			content: "";
-			position: absolute;
-			top: 75%;
-			left: 0;
-			height: 3px;
-			width: 100%;
-			background: $green;
-			z-index: -1;
-		}
+		background: linear-gradient(transparent, transparent 75%, $green 75.1%, $green 90%, transparent 90.1%, transparent);
 		&:hover, &:focus, &:active {
-			&::before {
-				top: 0;
-				height: 100%;
-			}
+			background: linear-gradient($green, $green);
 		}
 	}
 	p img {
@@ -352,13 +340,9 @@ main {
 			list-style-type: none;
 
 			a {
-				&::before {
-					height: 0;
-				}
+				background: none;
 				&:hover, &:focus, &:active {
-					&::before {
-						height: 100%;
-					}
+					background: linear-gradient($green, $green);
 				}
 			}
 		}
