--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,7 +14,7 @@ body {
     	font-size: 14px;
     }
     font-weight: 400;
-    line-height: 1.6em;
+    line-height: 1.6;
     padding: 0;
     margin: 0;
     overflow-x: hidden;
@@ -326,7 +326,12 @@ main {
 
 	&.program {
 		text-align: center;
-		line-height: 1.3;
+
+		span, h2, h3, h3 + p {
+			display: block;
+			text-align: center;
+			line-height: 1.3;
+		}
 
 		strong {
 			display: block;
