--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -525,3 +525,40 @@ footer {
 		width: 102%;
 	}
 }
+
+.photos {
+	text-align: center;
+
+	h2 {
+		font-size: 2rem;
+	}
+
+	.gallery {
+		max-width: none;
+		padding: 0;
+		// columns: auto 3;
+		// column-gap: 1rem;
+		img {
+			border-radius: 0.2rem;
+			cursor: pointer;
+			margin: 8px;
+			border: 1px solid rgba(black, 0.1);
+			width: 300px;
+
+			@media (max-width: 1000px) {
+				width: 200px;
+				margin: 6px
+			}
+
+			@media (max-width: 650px) {
+				width: 150px;
+				margin: 4px;
+			}
+
+			@media (max-width: 480px) {
+				width: 100px;
+				margin: 2px;
+			}
+		}
+	}
+}
