--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -528,7 +528,7 @@ footer {
 
 .photos {
 	p {
-		max-width: 70rem;
+		max-width: 45rem;
 	}
 
 	text-align: center;
@@ -540,6 +540,17 @@ footer {
 	#galleries {
 		max-width: none;
 		padding: 0;
+
+		p {
+			max-width: 45rem;
+			margin: 1rem auto;
+
+			.password {
+				font-family: monospace;
+				font-size: 1.15em;
+				line-height: 1rem;
+			}
+		}
 	}
 
 	.gallery {
